<resources>
    <string name="app_name">智能标示</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="picker_text_parse">解析数据</string>
    <string name="picker_text_show">显示省市区选择器</string>
    <string name="picker_custom_lunar">公农历切换</string>
    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>
    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="picker_custom_parent">自定义父容器</string>
    <string name="picker_non_linkage">条件选择器(不联动)</string>
    <string name="picker_json_parse_sample">省市区Json文件解析示例</string>


    <string name="register">注册</string>
    <string name="login">登     录</string>

    <string name="login_tv02">医院  :</string>
    <string name="login_tv03">大区  :</string>
    <string name="login_tv04">科室  :</string>
    <string name="login_tv05">分区  :</string>
    <string name="login_tv06">密码  :</string>
    <string name="login_tv07">忘记密码？</string>

    <string name="login_et01">请选择省-市-区</string>
    <string name="login_et02">请选择医院</string>
    <string name="login_et03">请选择大区</string>
    <string name="login_et04">请选择科室</string>
    <string name="login_et05">请选择分区</string>
    <string name="login_et06">请输入密码</string>

    <string name="register_et03">请输入大区</string>
    <string name="register_et04">请输入科室</string>
    <string name="register_et05">请输入分区</string>
    <string name="register_et06">请输入床位数</string>
    <string name="register_et07">请输入密码</string>
    <string name="register_et08">请再次输入密码</string>
    <string name="register_et09">需6-20位字符</string>
    <string name="register_et010">完成</string>

    <string name="administration_tv01">管理</string>
    <string name="deletebedtitle">要删除“%1$s”吗？</string>
    <string name="deletecontent">姓名：%1$s，性别：%2$s，年龄：%3$d岁</string>
    <string name="leavehostitle">%1$s号床位病人已出院？</string>

    <string name="confirm">确定</string>


</resources>
