<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white100"
    android:orientation="vertical"
    tools:context="com.intelligent.marking.activity.LoginActivity">
    <!--title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_60"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="31dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_20"
            android:gravity="center"
            android:src="@mipmap/saoyisao01" />

        <TextView
            android:id="@+id/login_tv_register"
            android:layout_width="36dp"
            android:layout_height="17dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/layout_20"
            android:gravity="center"
            android:text="@string/register"
            android:includeFontPadding="false"
            android:textColor="@color/blue"
            android:textSize="17sp" />

    </RelativeLayout>
    <!--loge-->
    <ImageView
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_15"
        android:gravity="center"
        android:src="@mipmap/denglu01" />
    <!--省 市 区-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_20"
        android:layout_marginRight="@dimen/layout_20"
        android:layout_marginTop="@dimen/layout_15"
        android:background="@drawable/yuan_baise50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_tv_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/layout_15"
            android:text="请选择省-市-区" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/layout_30"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:gravity="center" />


        <ImageView
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_15"
            android:layout_marginRight="@dimen/layout_15"
            android:gravity="center"
            android:src="@mipmap/weizhi01" />
    </LinearLayout>
    <!--医院-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_20"
        android:layout_marginRight="@dimen/layout_20"
        android:layout_marginTop="@dimen/layout_15"
        android:background="@drawable/yuan_baise50"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/layout_80"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/layout_15"
            android:text="@string/login_tv02" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/layout_15"
            android:text="@string/login_et02" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_15"
            android:layout_marginRight="@dimen/layout_15"
            android:gravity="center"
            android:src="@mipmap/xuanze01" />
    </LinearLayout>
    <!--大区-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_20"
        android:layout_marginRight="@dimen/layout_20"
        android:layout_marginTop="@dimen/layout_15"
        android:background="@drawable/yuan_baise50"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/layout_80"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/layout_15"
            android:text="@string/login_tv03" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/layout_15"
            android:text="@string/login_et03" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_15"
            android:layout_marginRight="@dimen/layout_15"
            android:gravity="center"
            android:src="@mipmap/xuanze01" />
    </LinearLayout>
    <!--科室-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_20"
        android:layout_marginRight="@dimen/layout_20"
        android:layout_marginTop="@dimen/layout_15"
        android:background="@drawable/yuan_baise50"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/layout_80"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/layout_15"
            android:text="@string/login_tv04" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/layout_15"
            android:text="@string/login_et04" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_15"
            android:layout_marginRight="@dimen/layout_15"
            android:gravity="center"
            android:src="@mipmap/xuanze01" />
    </LinearLayout>
    <!--分区-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_20"
        android:layout_marginRight="@dimen/layout_20"
        android:layout_marginTop="@dimen/layout_15"
        android:background="@drawable/yuan_baise50"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/layout_80"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/layout_15"
            android:text="@string/login_tv05" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/layout_15"
            android:text="@string/login_et05" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_15"
            android:layout_marginRight="@dimen/layout_15"
            android:gravity="center"
            android:src="@mipmap/xuanze01" />
    </LinearLayout>
    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_20"
        android:layout_marginRight="@dimen/layout_20"
        android:layout_marginTop="@dimen/layout_15"
        android:background="@drawable/yuan_baise50"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/layout_80"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/layout_15"
            android:text="@string/login_tv06" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_et06"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="@dimen/layout_15" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_15"
            android:layout_marginRight="@dimen/layout_15"
            android:gravity="center"
            android:src="@mipmap/mima01" />
    </LinearLayout>
    <!--登录-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/login_tv01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_20"
            android:layout_marginRight="@dimen/layout_20"
            android:layout_marginTop="@dimen/layout_20"
            android:background="@drawable/yuan_lanse50"
            android:gravity="center"
            android:padding="@dimen/layout_15"
            android:text="@string/login"
            android:textColor="@color/white100"
            android:textSize="@dimen/Text_24" />
    </LinearLayout>
    <!--忘记密码？-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/denglu02" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/layout_20"
            android:layout_marginTop="@dimen/layout_5"
            android:padding="@dimen/layout_5"
            android:text="@string/login_tv07"
            android:textColor="@color/text66" />
    </FrameLayout>


</LinearLayout>
